--- a/capstone_client/src/styles/global/_global.scss
+++ b/capstone_client/src/styles/global/_global.scss
@@ -1,3 +1,11 @@
 @use "../partials/typography" as *;
 @use "../partials/variables" as *;
 @use "../partials/mixins" as *;
+
+*{
+    box-sizing: border-box;
+}
+
+ol, ul{
+    list-style: none;
+}
