--- a/capstone_client/src/components/RegisterForm/RegisterForm.scss
+++ b/capstone_client/src/components/RegisterForm/RegisterForm.scss
@@ -1,3 +1,3 @@
 @import "../../styles/partials/mixins";
 @import "../../styles/partials/typography";
-@import "../../styles/partials/variables"
+@import "../../styles/partials/variables";
