--- a/capstone_client/src/components/HeroExercise/HeroExercise.scss
+++ b/capstone_client/src/components/HeroExercise/HeroExercise.scss
@@ -6,13 +6,23 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    font-size: 2rem;
 
     &__info {
-        text-align: right;
+        text-align: center;
         width: 20%;
 
+        &--name {
+            font-weight: bold;
+        }
+
+        &--type {
+            font-style: italic;
+        }
+
         &--description {
-            
+          text-align: center;  
+          font-size: 1.5rem;
         }
     }
 
