--- a/capstone_client/src/pages/AuthPage/AuthPage.scss
+++ b/capstone_client/src/pages/AuthPage/AuthPage.scss
@@ -1,3 +1,33 @@
 @import "../../styles/partials/mixins";
 @import "../../styles/partials/typography";
 @import "../../styles/partials/variables";
+
+.auth-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #f5f5f5; 
+    
+    .auth-container {
+      width: 100%;
+      max-width: 400px; 
+      padding: 20px;
+      background-color: white;
+      border: 1px solid white;
+      border-radius: 8px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      
+      .form-divider {
+        margin: 20px 0;
+        text-align: center;
+        
+        &__text {
+          display: inline-block;
+          background-color: #f8f9fa;
+          padding: 0 10px;
+          font-size: 16px;
+        }
+      }
+    }
+}
